--- a/app/templates/list_view_template.j2
+++ b/app/templates/list_view_template.j2
@@ -6,7 +6,7 @@
             <tr>
                 <th>Action</th>
                 {% for prop in datatable_properties %}
-                <th>{{ prop.csharp_name }}</th>
+                <th>{{ prop.display_name }}</th>
                 {% endfor %}
             </tr>
         </thead>
