--- a/app/templates/controller_template.j2
+++ b/app/templates/controller_template.j2
@@ -38,21 +38,8 @@ namespace Latest_Staff_Portal.Controllers
                 var userId = employee?.UserID;
                 var StaffNo = Session["Username"].ToString();
 
-                // Choose one of the following filters and adjust as needed
-                string filter = "";
-                {% for field in user_filter_fields %}
-                {% if loop.first %}
-                // Using {{ field.original_name }} for filtering - adjust if needed
-                filter = "{{ field.original_name }} eq '" + ({% if field.original_name == 'Created_By' or field.original_name == 'User_ID' %}userId{% else %}StaffNo{% endif %}) + "'";
-                {% endif %}
-                {% endfor %}
-
-                // If no user filter fields detected, show all records for the current user context
-                if (string.IsNullOrEmpty(filter)) {
-                    filter = "1 eq 1";
-                }
-
-                var rsrceReq = $"{{ entity_name }}?$filter={filter}&$format=json";
+                //add filter based on your requirements
+                var rsrceReq = $"{{ entity_name }}&$format=json";
                 var httpResponse = Credentials.GetOdataData(rsrceReq);
 
                 using var streamReader = new StreamReader(httpResponse.GetResponseStream());
@@ -65,7 +52,9 @@ namespace Latest_Staff_Portal.Controllers
             }
             catch (Exception ex)
             {
-                // ... error handling ...
+                var erroMsg = new Error();
+                erroMsg.Message = ex.Message.Replace("'", "");
+                return View("~/Views/Common/ErrorMessange.cshtml", erroMsg);
             }
         }
 
@@ -97,6 +86,56 @@ namespace Latest_Staff_Portal.Controllers
                 var erroMsg = new Error();
                 erroMsg.Message = ex.Message.Replace("'", "");
                 return View("~/Views/Common/ErrorMessange.cshtml", erroMsg);
+            }
+        }
+
+        // Method to create new document form
+        public PartialViewResult New{{ page_name }}()
+        {
+            try
+            {
+                var employee = Session["EmployeeData"] as EmployeeView;
+                var StaffNo = Session["Username"].ToString();
+                var viewModel = new {{ model_name }}();
+
+                return PartialView("PartialViews/New{{ page_name }}", viewModel);
+            }
+            catch (Exception ex)
+            {
+                var erroMsg = new Error();
+                erroMsg.Message = ex.Message;
+                return PartialView("~/Views/Shared/Partial Views/ErroMessangeView.cshtml", erroMsg);
+            }
+        }
+
+        // Method to submit new document
+        public JsonResult Submit{{ page_name }}({{ model_name }} viewModel)
+        {
+            try
+            {
+                var employee = Session["EmployeeData"] as EmployeeView;
+                var staffNo = Session["Username"].ToString();
+                var UserID = employee?.UserID;
+
+                if (string.IsNullOrEmpty(staffNo))
+                {
+                    return Json(new { message = "User session expired. Please login again.", success = false },
+                        JsonRequestBehavior.AllowGet);
+                }
+
+                // TODO: REPLACE WITH YOUR BUSINESS CENTRAL FUNCTION
+                // var docNo = Credentials.ObjNav.FnCreate{{ page_name }}(UserID, viewModel.Property1, viewModel.Property2);
+                // Example: var docNo = Credentials.ObjNav.FnCreate{{ page_name }}(UserID, viewModel.PaymentNarration);
+
+                string docNo = "DOC001"; // Replace with actual BC function call
+
+                return Json(new { message = "{{ page_name }} created successfully", docNo = docNo, success = true },
+                    JsonRequestBehavior.AllowGet);
+            }
+            catch (Exception ex)
+            {
+                return Json(new { message = ex.Message.Replace("'", ""), success = false },
+                    JsonRequestBehavior.AllowGet);
             }
         }
 
@@ -175,5 +214,39 @@ namespace Latest_Staff_Portal.Controllers
             }
         }
         */
+
+         // Line management methods
+        public PartialViewResult Add{{ page_name }}Line()
+        {
+            try
+            {
+                // Return partial view for adding lines
+                // You might want to create a separate view model for lines
+                return PartialView("PartialViews/Add{{ page_name }}Line");
+            }
+            catch (Exception ex)
+            {
+                var erroMsg = new Error();
+                erroMsg.Message = ex.Message;
+                return PartialView("~/Views/Shared/Partial Views/ErroMessangeView.cshtml", erroMsg);
+            }
+        }
+
+        public JsonResult Delete{{ page_name }}Line(string code, string lineNo)
+        {
+            try
+            {
+                // TODO: REPLACE WITH YOUR BUSINESS CENTRAL FUNCTION
+                // Credentials.ObjNav.FnDelete{{ page_name }}Lines(Convert.ToInt32(lineNo), code);
+
+                return Json(new { message = "Line deleted successfully", success = true },
+                    JsonRequestBehavior.AllowGet);
+            }
+            catch (Exception ex)
+            {
+                return Json(new { message = ex.Message.Replace("'", ""), success = false },
+                    JsonRequestBehavior.AllowGet);
+            }
+        }
     }
 }
