--- a/app/templates/document_view_template.j2
+++ b/app/templates/document_view_template.j2
@@ -88,8 +88,8 @@
             {% for prop in properties %}
             <div class="col-md-6">
                 <div class="form-group">
-                    @Html.Label("{{ prop.csharp_name }}", htmlAttributes: new { @class = "control-label col-md-12" })
-                    @Html.TextBoxFor(m => m.{{ prop.csharp_name }}, new { @class = "form-control", @readonly = "readonly", @style = "background-color:var(--light-gray)" })
+                    @Html.Label("{{ prop.display_name }}", htmlAttributes: new { @class = "control-label col-md-12" })
+                    @Html.TextBoxFor(m => m.{{ prop.csharp_name }}, new { @class = "form-control", @readonly = "readonly", @style = "background-color:#f4f4f4" })
                 </div>
             </div>
             {% endfor %}
@@ -100,25 +100,6 @@
             <b>{{ page_name }} Lines</b>
             <hr />
             <div id="divLines"></div>
-        </div>
-    </div>
-</div>
-
-<!-- Modal -->
-<div id="myModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" data-backdrop="static" data-keyboard="false">
-    <div class="modal-dialog modal-lg">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title mt-0" id="myModalLabel"><label id="labelF"></label></h5>
-                <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body" id="modalBody">
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary waves-effect" data-bs-dismiss="modal">Close</button>
-            </div>
         </div>
     </div>
 </div>
@@ -147,6 +128,72 @@
             }
         });
     };
+
+    // Add Line Function
+    var Add{{ page_name }}Line = function () {
+        var docNo = '@Model.{{ primary_key.csharp_name if primary_key else 'No' }}';
+        $("#labelF").text("New {{ page_name }} Line");
+        ShowProgress();
+        $.ajax({
+            async: true,
+            type: "GET",
+            dataType: "html",
+            url: '/{{ page_name }}/Add{{ page_name }}Line',
+            success: function (data) {
+                $("#modalBody").html(data);
+                HideProgress();
+                $("#myModal").modal("show");
+            },
+            error: function (err) {
+                HideProgress();
+                Swal.fire('Warning', err.responseText, 'warning');
+            }
+        });
+    };
+
+    // Delete Line Function
+    function Delete{{ page_name }}Line(entryNo) {
+        Swal.fire({
+            title: 'Are you sure?',
+            text: "You won't be able to revert this!",
+            icon: 'warning',
+            showCancelButton: true,
+            confirmButtonColor: '#3085d6',
+            cancelButtonColor: '#d33',
+            confirmButtonText: 'Yes, delete it!'
+        }).then((result) => {
+            if (result.isConfirmed) {
+                var isValid = true;
+                var docNo = '@Model.{{ primary_key.csharp_name if primary_key else 'No' }}';
+
+                ShowProgress();
+                $.ajax({
+                    type: "POST",
+                    url: "/{{ page_name }}/Delete{{ page_name }}Line",
+                    data: JSON.stringify({
+                        code: docNo,
+                        lineNo: entryNo
+                    }),
+                    contentType: "application/json; charset=utf-8",
+                    dataType: "json",
+                    success: function (data) {
+                        HideProgress();
+                        if (data.success) {
+                            $("#myModal").modal("hide");
+                            Swal.fire('Success', data.message, 'success');
+                            Load{{ page_name }}Lines('@Model.{{ primary_key.csharp_name if primary_key else 'No' }}', '@Model.Status');
+                        } else {
+                            Swal.fire('Warning', data.message, 'warning');
+                        }
+                    },
+                    error: function (err) {
+                        HideProgress();
+                        Swal.fire('Warning', err.responseText, 'warning');
+                    }
+                });
+            }
+        });
+    }
 
     var SendDocApprovalRequest = function (Code) {
         ShowProgress();
