--- a/app/templates/document_view_template.j2
+++ b/app/templates/document_view_template.j2
@@ -16,49 +16,6 @@
     </div>
 </div>
 
-@* //////////////////////////////Modal///////////////////////////////////////// *@
-<div id="myModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" data-backdrop="static" data-keyboard="false">
-    <div class="modal-dialog modal-lg">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title mt-0" id="myModalLabel">
-                    <label id="labelF"></label>
-                </h5>
-                <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body" id="modalBody">
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary waves-effect" data-bs-dismiss="modal">Close</button>
-            </div>
-        </div>
-    </div>
-</div>
-
-
-@*//////////////////////Modal////////////////////////////*@
-<div class="modal fade" id="myModalUnits" tabindex="-1" role="dialog">
-    <div class="modal-dialog modal-lg" role="document">
-        <div class="modal-content bg-white">
-            <div class="modal-header">
-                <h4 class="modal-title"></h4>
-                <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body" id="modalBodyUnits">
-                <iframe id="iframe" style="width:100%;height:450px"></iframe>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-danger waves-effect " data-bs-dismiss="modal">Close</button>
-            </div>
-        </div>
-    </div>
-</div>
-
-
 <div class="card">
     <div class="card-body">
         <div style="text-align:right">
@@ -80,19 +37,16 @@
             <button class="action-buttons" onclick="ViewDocComments('@Model.{{ primary_key.csharp_name if primary_key else 'No' }}');">
                 <i class="fa fa-list-ol" aria-hidden="true"></i> Comments
             </button>
-
         </div>
         <hr />
 
-        <div class="row">
-            {% for prop in properties %}
+        <div class="row">{% for prop in properties %}
             <div class="col-md-6">
                 <div class="form-group">
                     @Html.Label("{{ prop.display_name }}", htmlAttributes: new { @class = "control-label col-md-12" })
-                    @Html.TextBoxFor(m => m.{{ prop.csharp_name }}, new { @class = "form-control", @readonly = "readonly", @style = "background-color:#f4f4f4" })
+                    @Html.TextBoxFor(m => m.{{ prop.csharp_name }}, new { @class = "form-control", @readonly = "readonly", @style = "background-color:var(--light-gray)" })
                 </div>
-            </div>
-            {% endfor %}
+            </div>{% endfor %}
         </div>
 
         <div id="div{{ page_name }}Lines">
@@ -129,7 +83,6 @@
         });
     };
 
-    // Add Line Function
     var Add{{ page_name }}Line = function () {
         var docNo = '@Model.{{ primary_key.csharp_name if primary_key else 'No' }}';
         $("#labelF").text("New {{ page_name }} Line");
@@ -139,6 +92,9 @@
             type: "GET",
             dataType: "html",
             url: '/{{ page_name }}/Add{{ page_name }}Line',
+            data: {
+                docNo: docNo
+            },
             success: function (data) {
                 $("#modalBody").html(data);
                 HideProgress();
@@ -151,7 +107,6 @@
         });
     };
 
-    // Delete Line Function
     function Delete{{ page_name }}Line(entryNo) {
         Swal.fire({
             title: 'Are you sure?',
@@ -163,9 +118,7 @@
             confirmButtonText: 'Yes, delete it!'
         }).then((result) => {
             if (result.isConfirmed) {
-                var isValid = true;
                 var docNo = '@Model.{{ primary_key.csharp_name if primary_key else 'No' }}';
-
                 ShowProgress();
                 $.ajax({
                     type: "POST",
