--- a/app/templates/lines_function_controller_template.j2
+++ b/app/templates/lines_function_controller_template.j2
@@ -11,9 +11,7 @@ public ActionResult New{{ page_name }}Line(string docNo)
 
         viewModel.No = docNo;
 
-        // REGION: Dropdown Data Population
-        // Uncomment and modify the following regions if you need to fetch dropdown data from Business Central
-        {% for param in parameters %}{% if param.name.lower() in ['accountno', 'fundingsource', 'voteitem', 'dim3', 'dim6'] %}
+{% for param in parameters %}{% if param.name.lower() in ['accountno', 'fundingsource', 'voteitem', 'dim3', 'dim6'] %}
         /*
         #region {{ param.name }} List
         var {{ param.name }}List = new List<DropdownList>();
@@ -23,22 +21,12 @@ public ActionResult New{{ page_name }}Line(string docNo)
         {
             var result = streamReader.ReadToEnd();
             var details = JObject.Parse(result);
-            {{ param.name }}List.AddRange(from JObject config in details["value"]
-                select new DropdownList {
-                    Text = $"{(string)config["No"]} - {(string)config["Name"]}",
-                    Value = (string)config["No"]
-                });
+            {{ param.name }}List.AddRange(from JObject config in details["value"] select new DropdownList { Text = $"{(string)config["No"]} - {(string)config["Name"]}", Value = (string)config["No"] });
         }
-        viewModel.{{ param.csharp_name }}List = {{ param.name }}List.Select(x =>
-            new SelectListItem
-            {
-                Text = x.Text,
-                Value = x.Value
-            }).ToList();
+        viewModel.{{ param.csharp_name }}List = {{ param.name }}List.Select(x => new SelectListItem { Text = x.Text, Value = x.Value }).ToList();
         #endregion
         */
-        {% endif %}{% endfor %}
-        // END REGION
+{% endif %}{% endfor %}
 
         return PartialView("PartialViews/New{{ page_name }}Line", viewModel);
     }
@@ -60,26 +48,18 @@ public JsonResult Submit{{ page_name }}Line({{ model_name }} viewModel)
 
         if (string.IsNullOrEmpty(staffNo))
         {
-            return Json(new { message = "User session expired. Please login again.", success = false },
-                JsonRequestBehavior.AllowGet);
+            return Json(new { message = "User session expired. Please login again.", success = false }, JsonRequestBehavior.AllowGet);
         }
 
-        // Call Business Central line function
         var success = Credentials.ObjNav.{{ function_name }}(
-            {% for param in parameters %}
-            {% if param.name.lower() == 'docno' %}viewModel.No{% elif param.name.lower() == 'userid' %}UserID{% else %}viewModel.{{ param.csharp_name }}{% endif %}{% if not loop.last %}, {% endif %}
-            {% endfor %}
+{% for param in parameters %}{% if param.name.lower() == 'docno' %}viewModel.No{% elif param.name.lower() == 'userid' %}UserID{% else %}viewModel.{{ param.csharp_name }}{% endif %}{% if not loop.last %}, {% endif %}{% endfor %}
         );
 
-        return Json(new {
-            message = success ? "{{ page_name }} line submitted successfully" : "Failed to submit {{ page_name }} line",
-            success = success
-        }, JsonRequestBehavior.AllowGet);
+        return Json(new { message = success ? "{{ page_name }} line submitted successfully" : "Failed to submit {{ page_name }} line", success = success }, JsonRequestBehavior.AllowGet);
     }
     catch (Exception ex)
     {
-        return Json(new { message = ex.Message.Replace("'", ""), success = false },
-            JsonRequestBehavior.AllowGet);
+        return Json(new { message = ex.Message.Replace("'", ""), success = false }, JsonRequestBehavior.AllowGet);
     }
 }
 
@@ -90,12 +70,10 @@ public JsonResult Delete{{ page_name }}Line(string code, string lineNo)
         // TODO: Replace with your actual Business Central delete function
         // Credentials.ObjNav.FnDelete{{ page_name }}Lines(Convert.ToInt32(lineNo), code);
 
-        return Json(new { message = "Line deleted successfully", success = true },
-            JsonRequestBehavior.AllowGet);
+        return Json(new { message = "Line deleted successfully", success = true }, JsonRequestBehavior.AllowGet);
     }
     catch (Exception ex)
     {
-        return Json(new { message = ex.Message.Replace("'", ""), success = false },
-            JsonRequestBehavior.AllowGet);
+        return Json(new { message = ex.Message.Replace("'", ""), success = false }, JsonRequestBehavior.AllowGet);
     }
 }
