--- a/app/templates/lines_function_model_template.j2
+++ b/app/templates/lines_function_model_template.j2
@@ -4,9 +4,6 @@ public class {{ model_name }}
     {% for param in parameters %}{% if param.name.lower() != 'docno' and param.name.lower() != 'userid' and param.name.lower() != 'lineno' %}
     public {{ param.type }} {{ param.csharp_name }} { get; set; }
     {% endif %}{% endfor %}
-
-    // Dropdown lists for form fields
-    {% for param in parameters %}{% if param.name.lower() in ['accountno', 'fundingsource', 'voteitem', 'dim3', 'dim6'] %}
-    public List<SelectListItem> {{ param.csharp_name }}List { get; set; } = new List<SelectListItem>();
-    {% endif %}{% endfor %}
+    // Dropdown lists for form fields - Replace ListOfYourDropdownProperty with the right property name
+    // public List<SelectListItem> ListOfYourDropdownProperty { get; set; } = new List<SelectListItem>();
 }
